# ebook_analyzer

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
src/ebook_calibre_analyzer/: __init__.py  __main__.py  cli.py  copier.py  csv_handler.py  discovery.py  models.py  preprocessing.py  utils.py
src/ebook_calibre_analyzer/comparison/: __init__.py  stage1.py  stage2.py  stage3.py
src/ebook_calibre_analyzer/hashing/: __init__.py  base.py  cpu.py  gpu.py  orchestrator.py  pool.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_create_analyze_parser.py  test_create_copy_parser.py  test_create_parser.py  test_get_default_file_extensions_str.py  test_get_default_output_path.py  test_parse_size.py
tests/comparison/: test_comparison.py
tests/copier/: __init__.py  test_conflict_resolution.py  test_file_copier.py
tests/csv_handler/: __init__.py  test_csv_handler.py
tests/discovery/: __init__.py  test_discovery.py
tests/hashing/: __init__.py
tests/hashing/base/: __init__.py  test_hash_processor.py
tests/hashing/cpu/: __init__.py  test_cpu_hash_processor.py  test_hash_workers.py
tests/hashing/gpu/: __init__.py  test_gpu_hash_processor.py
tests/hashing/pool/: __init__.py  test_gpu_memory_pool.py
tests/integration/: __init__.py  test_analysis_workflow.py  test_copy_workflow.py  test_end_to_end.py
tests/main/: __init__.py  test_main.py  test_run_analyze.py  test_run_copy.py
tests/models/: test_ebook_file.py  test_file_collection.py
tests/preprocessing/: test_preprocessing.py
tests/utils/: test_generate_random_suffix.py  test_get_default_file_extensions.py
